qtdoc-opensource-src (5.10.1-2) UNRELEASED; urgency=medium


 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 20 Mar 2018 20:12:34 +0300

qtdoc-opensource-src (5.10.1-1) experimental; urgency=medium

  * New upstream release.
  * Bump Standards-version to 4.1.3, and change the priority from extra
    to optional.
  * Bump debhelper compat to 11:
    - dh_install -> dh_missing.
    - Remove --parallel, which is redundant.
  * Update debian/watch to reflect the upstream tarball rename.
  * Bump all of the build dependencies to 5.10.1.
  * Add the qtvirtualkeyboard module.
  * Add my name to the copyright file for debian/.
  * Update Vcs-* to reflect the move to Salsa.

 -- Simon Quigley <tsimonq2@ubuntu.com>  Mon, 19 Mar 2018 16:52:11 -0500

qtdoc-opensource-src (5.9.2-1) unstable; urgency=medium

  * New upstream release.
  * Bump Qt build-dependencies to 5.9.2.
  * Add new module: qtwebview.
  * Use debhelper compat level 10 and dh_missing.
  * Set priority to optional instead of deprecated extra.
  * Bump Standards-Version to 4.1.1.

 -- Dmitry Shachnev <mitya57@debian.org>  Fri, 27 Oct 2017 22:26:26 +0300

qtdoc-opensource-src (5.9.1-2) unstable; urgency=medium

  * Release to unstable.
  * Remove Qt Speech from the list of available doc, it is still experimental
    material.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 16 Aug 2017 15:37:35 -0300

qtdoc-opensource-src (5.9.1-1) experimental; urgency=medium

  [ Simon Quigley ]
  * New upstream release.
  * Add myself to Uploaders.

  [ Dmitry Shachnev ]
  * Bump Qt build-dependencies to 5.9.1.
  * Add new modules: qtcharts, qtspeech.
  * Drop debian/qt5-doc-html.links, all Qt documentation should be in the
    same directory to avoid broken links (closes: #858615).
  * Bump Standards-Version to 4.0.0, no changes needed.
  * Bump years in debian/copyright.
  * Stop overriding dh_installdocs. LGPL_EXCEPTION.txt no longer exists.
