@@ -1,5 +1,7 @@
 qtdoc-opensource-src (5.10.1-2) UNRELEASED; urgency=medium
 
+  [ Dmitry Shachnev ]
+  * Remove unneeded code from debian/rules.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 20 Mar 2018 20:12:34 +0300
 
